--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,11 +2,11 @@
  on:
    push:
      branches:
-       - main
+       - master
  jobs:
    deploy_scripts_s3:
      name: Copy scripts to s3
-     runs-on: ubuntu-latest
+     runs-on: self-hosted
 
      steps:
      - name: Checkout
